# CS380-GPGPU_Programming-OpenGL

./: .gitignore  1_assignment_readme.txt  2_assignment_readme.md  3_assignment_readme.txt  4_assignment_readme.txt  5_assignment_readme.txt  CMakeLists.txt  README.md
1_assignment/: CMakeLists.txt  main_assignment1.cpp
2_assignment/: CMakeLists.txt  assignment2.odt  cylinder.cpp  cylinder.h  main_assignment2.cpp  shader.cpp  shader.h  vbocube.cpp  vbocube.h  vbomesh.h
2_assignment/shader/: gouraud.vs  lattice.vs  stripe.fs  stripe.vs
2_assignment/src/: main_assignment2.cpp
2_assignment/src/shader/: fog.fs  phong.fs  toon.fs
3_assignment/: CMakeLists.txt  assignment3.odt
3_assignment/src/: main_assignment3.cpp  resource_manager.cpp  resource_manager.h  texture.h
3_assignment/src/shaders/: fragmentshader.frag  vertexshader.vert
4_assignment/: CMakeLists.txt
4_assignment/src/: CS380_prog.cpp  imageprocessing.cu  imageprocessing.cuh
5_assignment/: CMakeLists.txt
5_assignment/src/: CS380_prog.cpp  matrixkernels.cu
common/: CMakeLists.txt  grid.cpp  random.h  shader.cpp  shadermodel.h  teapotpatch.cpp  trianglemesh.cpp
common/model/: vbocube.h  vbosphere.cpp
